--- a/learn.html
+++ b/learn.html
@@ -59,7 +59,8 @@
                 <img src="./images/1-2.png" style="transform: rotate(180deg);" alt="">
                 <img src="./images/1-3.png" alt="">
             </div>
-            <p>Anytime an edge piece is flipped (example below), fix it by doing the following moves: R' U F' U'</p>
+            <p>Anytime an edge piece is flipped (example below), fix it by doing the following moves: <strong>R' U F'
+                    U'</strong></p>
             <img src="./images/1-4.png" alt="">
             <p>Solve all 4 of the white edge pieces to make a cross. Make sure you always look at both colors on each
                 piece so that you end up with the side colors matching as well.</p>
@@ -90,9 +91,9 @@
             <p>Find an edge piece in the top layer without yellow as either of its 2 colors.
                 Turn the top so that it matches a center.
                 Face the piece and check if the top color matches the right center or left center.</p>
-            <p>If it matches the right side, do the following moves: U R U R' U' F' U' F</p>
+            <p>If it matches the right side, do the following moves: <strong>U R U R' U' F' U' F</strong></p>
             <img src="./images/3-1.png" alt="">
-            <p>If it matches the left side, do the following moves: U' L' U' L U F U F'</p>
+            <p>If it matches the left side, do the following moves: <strong>U' L' U' L U F U F'</strong></p>
             <img src="./images/3-2.png" alt="">
         </section>
 
@@ -107,7 +108,8 @@
                 <img src="./images/4-2.png" alt="">
                 <img src="./images/4-3.png" alt="">
             </div>
-            <p>Then do the following moves: F R U R' U' F'. If the cross is not solved yet, hold the cube to match the
+            <p>Then do the following moves: <strong>F R U R' U' F'</strong>. If the cross is not solved yet, hold the
+                cube to match the
                 new case and repeat.</p>
         </section>
 
@@ -122,7 +124,8 @@
             <p>Hold the 2 matching edges at the back/right. If they are across from each other, hold them in any way.
             </p>
             <img src="./images/5-2.png" alt="">
-            <p>Then do the following moves: R U R' U R U2 R'. Turn the top to match all 4 colors. If you can only match
+            <p>Then do the following moves: <strong>R U R' U R U2 R'</strong>. Turn the top to match all 4 colors. If
+                you can only match
                 2 colors, then repeat this step.</p>
         </section>
 
@@ -139,7 +142,7 @@
             </div>
             <p>If 1 corner is correct, hold it in the front/right (if 0 are correct, hold any corner in the
                 front/right).
-                Then do the following moves: U R U' L' U R' U' L</p>
+                Then do the following moves: <strong>U R U' L' U R' U' L</strong></p>
         </section>
 
         <section>
@@ -150,7 +153,8 @@
             <p>Turn the cube over so that the unsolved corners are all in the bottom layer.
                 You may have 2, 3, or 4 unsolved corner pieces.</p>
             <img src="./images/7-1.png" alt="" style="transform: rotate(180deg);">
-            <p>Repeatedly do the 4-move sequence (R U R' U') until the front/right corner is solved (has yellow on the
+            <p>Repeatedly do the 4-move sequence (<strong>R U R' U'</strong>) until the front/right corner is solved
+                (has yellow on the
                 bottom). Then turn the bottom layer (not the whole cube) to bring an unsolved corner to the front/right.
                 Repeat
                 until the whole cube is solved.</p>
