--- a/solver.html
+++ b/solver.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cubecentrix</title>
     <link rel="stylesheet" href="./styles/global.css">
-
+    <link rel="stylesheet" href="./styles/solver.css">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/worker.min.js"></script>  -->
+    <!-- are include uri in cod si nu prea pot sa folosesc async :( -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/async.min.js"></script> -->
 </head>
 
 <body>
@@ -18,15 +22,98 @@
             <li><a href="./timer.html">TIMER</a></li>
         </ul>
     </nav>
+    <main>
+        <div class="container">
+            <div id="top-face" class="face">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div id="left-face" class="face">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div id="front-face" class="face">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div id="right-face" class="face">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div id="bottom-face" class="face">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div id="back-face" class="face">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
 
-    <div style="display: flex; justify-content: center;">
-        <h1>COMING SUNE</h1>
-    </div>
+        <div class="color-selector">
+            <div class="color" data-color="white" style="background-color: white;"></div>
+            <div class="color" data-color="red" style="background-color: red;"></div>
+            <div class="color" data-color="green" style="background-color: green;"></div>
+            <div class="color" data-color="blue" style="background-color: blue;"></div>
+            <div class="color" data-color="yellow" style="background-color: yellow;"></div>
+            <div class="color" data-color="orange" style="background-color: orange;"></div>
+        </div>
+
+        <button id="solve-button">Solve the Cube</button>
+
+        <p id="solution-output"></p>
+    </main>
     
     <footer>
         <p>Created by Radu Antonio</p>
         <p>contact: raduantonio_2525@yahoo.com</p>
     </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/cube.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/solve.min.js"></script>
+    <script src="./scripts/solver.js"></script>
 </body>
 
 </html>
