--- a/solver.html
+++ b/solver.html
@@ -1,119 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cubecentrix</title>
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/solver.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/worker.min.js"></script>  -->
-    <!-- are include uri in cod si nu prea pot sa folosesc async :( -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/async.min.js"></script> -->
-</head>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/solver.css" />
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.min.js"></script>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <ul>
-            <li><a href="./index.html">HOME</a></li>
-            <li><a href="./learn.html">LEARN</a></li>
-            <li><a href="./algorithms.html">ALGORITHMS</a></li>
-            <li><a href="./solver.html">SOLVER</a></li>
-            <li><a href="./timer.html">TIMER</a></li>
-        </ul>
+      <ul>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./learn.html">LEARN</a></li>
+        <li><a href="./algorithms.html">ALGORITHMS</a></li>
+        <li><a href="./solver.html">SOLVER</a></li>
+        <li><a href="./timer.html">TIMER</a></li>
+      </ul>
     </nav>
+
+    <div id="camera">
+      <div id="buttonRow">
+        <label for="selectFace">Select a face:</label>
+        <select id="selectFace">
+          <option value="white">White</option>
+          <option value="orange">Orange</option>
+          <option value="green">Green</option>
+          <option value="red">Red</option>
+          <option value="blue">Blue</option>
+          <option value="yellow">Yellow</option>
+        </select>
+        <button id="scan">Capture Colors</button>
+        <button id="hide">Toggle Scanning Window</button>
+        <button id="resetColors">Reset colors</button>
+        <button id="generate">Generate random cube</button>
+      </div>
+      <script src="./scripts/scanner.js"></script>
+    </div>
+
     <main>
-        <div class="container">
-            <div id="top-face" class="face">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div id="left-face" class="face">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div id="front-face" class="face">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div id="right-face" class="face">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div id="bottom-face" class="face">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div id="back-face" class="face">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
+      <div class="container">
+        <div id="top-face" class="face">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="center" style="background-color: white"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
-
-        <div class="color-selector">
-            <div class="color" data-color="white" style="background-color: white;"></div>
-            <div class="color" data-color="red" style="background-color: red;"></div>
-            <div class="color" data-color="green" style="background-color: green;"></div>
-            <div class="color" data-color="blue" style="background-color: blue;"></div>
-            <div class="color" data-color="yellow" style="background-color: yellow;"></div>
-            <div class="color" data-color="orange" style="background-color: orange;"></div>
+        <div id="left-face" class="face">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="center" style="background-color: orange"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
+        <div id="front-face" class="face">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="center" style="background-color: green"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div id="right-face" class="face">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="center" style="background-color: red"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div id="bottom-face" class="face">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="center" style="background-color: yellow"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div id="back-face" class="face">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div class="center" style="background-color: blue"></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
 
-        <button id="solve-button">Solve the Cube</button>
+      <div class="color-selector">
+        <div
+          class="color"
+          data-color="white"
+          style="background-color: white"
+        ></div>
+        <div class="color" data-color="red" style="background-color: red"></div>
+        <div
+          class="color"
+          data-color="green"
+          style="background-color: green"
+        ></div>
+        <div
+          class="color"
+          data-color="blue"
+          style="background-color: blue"
+        ></div>
+        <div
+          class="color"
+          data-color="yellow"
+          style="background-color: yellow"
+        ></div>
+        <div
+          class="color"
+          data-color="orange"
+          style="background-color: orange"
+        ></div>
+      </div>
 
-        <p id="solution-output"></p>
+      <button id="solve-button">Solve the Cube</button>
+
+      <p id="solution-output"></p>
     </main>
-    
+
     <footer>
-        <p>Created by Radu Antonio</p>
-        <p>contact: raduantonio_2525@yahoo.com</p>
+      <p>Created by Radu Antonio</p>
+      <p>contact: raduantonio_2525@yahoo.com</p>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/cube.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cubejs@1.3.2/lib/solve.min.js"></script>
     <script src="./scripts/solver.js"></script>
-</body>
-
+  </body>
 </html>
