--- a/timer.html
+++ b/timer.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cubecentrix</title>
-    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/time.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <nav>
-        <ul>
-            <li><a href="./index.html">HOME</a></li>
-            <li><a href="./learn.html">LEARN</a></li>
-            <li><a href="./algorithms.html">ALGORITHMS</a></li>
-            <li><a href="./solver.html">SOLVER</a></li>
-            <li><a href="./timer.html">TIMER</a></li>
-        </ul>
+      <ul>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./learn.html">LEARN</a></li>
+        <li><a href="./algorithms.html">ALGORITHMS</a></li>
+        <li><a href="./solver.html">SOLVER</a></li>
+        <li><a href="./timer.html">TIMER</a></li>
+      </ul>
     </nav>
-
-    <div style="display: flex; justify-content: center;">
-        <h1>COMING SUNE</h1>
+    <div id="time-container">
+      <div id="timer">00:00.000</div>
+      <script src="./scripts/time.js"></script>
     </div>
-    
-    <footer>
-        <p>Created by Radu Antonio</p>
-        <p>contact: raduantonio_2525@yahoo.com</p>
-    </footer>
-</body>
 
+    <footer>
+      <p>Created by Radu Antonio</p>
+      <p>contact: raduantonio_2525@yahoo.com</p>
+    </footer>
+  </body>
 </html>
