--- a/algorithms.html
+++ b/algorithms.html
@@ -18,9 +18,10 @@
         <li><a href="./timer.html">TIMER</a></li>
       </ul>
     </nav>
-
-    <h1>OLL algs</h1>
-    <main id="OLL">
+    <div style="display: flex; justify-content: center;">
+      <h1 id="OLL">OLL algs</h1>
+    </div>
+    <main>
       <section id="awk">
         <h1 class="section-title">Awkward Shapes</h1>
         <div class="content-grid">
@@ -585,8 +586,10 @@
       </section>
     </main>
 
-    <h1>PLL algs</h1>
-    <main id="PLL">
+    <div style="display: flex; justify-content: center;">
+      <h1 id="PLL">PLL algs</h1>
+    </div>
+    <main>
       <section id="adj">
         <h1 class="section-title">Adjacent Corner Swap</h1>
         <div class="content-grid">
