--- a/timer.html
+++ b/timer.html
@@ -18,8 +18,13 @@
         <li><a href="./timer.html">TIMER</a></li>
       </ul>
     </nav>
+
+    <div id="sc-container">
+      <h1 id="scramble"></h1>
+    </div>
+    <hr />
     <div id="time-container">
-      <div id="timer">00:00.000</div>
+      <div id="timer">00:00.00</div>
       <script src="./scripts/time.js"></script>
     </div>
 
