--- a/solver.html
+++ b/solver.html
@@ -143,6 +143,10 @@
       <p id="solution-output"></p>
     </main>
 
+    <div id="container-cube">
+      <script src="./scripts/cube3d.js"></script>
+    </div>
+
     <footer>
       <p>Created by Radu Antonio</p>
       <p>contact: raduantonio_2525@yahoo.com</p>
