--- a/algorithms.html
+++ b/algorithms.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favi.png" type="image/png" />
+    <link rel="shortcut icon" href="/favi.png" type="image/png" />
     <title>Cubecentrix</title>
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/algorithms.css" />
@@ -18,9 +20,10 @@
         <li><a href="./timer.html">TIMER</a></li>
       </ul>
     </nav>
-    <div style="display: flex; justify-content: center;">
-      <h1 id="OLL">OLL algs</h1>
+    <div style="display: flex; justify-content: center">
+      <h1 id="OLL">OLL algorithms</h1>
     </div>
+    <hr />
     <main>
       <section id="awk">
         <h1 class="section-title">Awkward Shapes</h1>
@@ -586,9 +589,10 @@
       </section>
     </main>
 
-    <div style="display: flex; justify-content: center;">
-      <h1 id="PLL">PLL algs</h1>
+    <div style="display: flex; justify-content: center">
+      <h1 id="PLL">PLL algorithms</h1>
     </div>
+    <hr />
     <main>
       <section id="adj">
         <h1 class="section-title">Adjacent Corner Swap</h1>
