--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favi.png" type="image/png" />
+    <link rel="shortcut icon" href="/favi.png" type="image/png" />
     <title>Cubecentrix</title>
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/index.css" />
@@ -993,7 +995,7 @@
         </article>
       </section>
     </main>
-    <div style="height: 45px"></div>
+    <div style="height: 42.5px"></div>
     <footer>
       <p>Created by Radu Antonio</p>
       <p>contact: raduantonio_2525@yahoo.com</p>
