--- a/solver.html
+++ b/solver.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favi.png" type="image/png" />
+    <link rel="shortcut icon" href="/favi.png" type="image/png" />
     <title>Cubecentrix</title>
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/solver.css" />
